# firewall-objects

./: .gitignore  CHANGELOG.md  README.md  deploy.sh  migrate.sh  pyproject.toml  requirements_dev.txt
firewall_objects/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
firewall_objects/api/: serializers.py
firewall_objects/templates/firewall_objects/: firewallobjects.html  scopes.html  scopes_list.html
tests/: __init__.py  test_firewall_objects.py
