# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "firewall-objects"
version = "0.1.0"
authors = [
    {name = "Valentin Dahlén", email = "valentin.automation@gmail.com"},
]
description = "NetBox plugin for firewall-objects"
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">=3.10.0"

[project.optional-dependencies]
test = [
    "pre-commit==3.7.0",
    "pytest==8.1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "F", "N", "W", "E"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "off"